--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,4 +1,4 @@
-name: Deplot docs
+name: Deploy docs
 
 on: 
   push:
@@ -19,10 +19,10 @@ jobs:
 
       - run: npm ci
 
-      - run: npm run build
+       - run: npm run build
 
-      - name: Deploy storybook
-        working-directory: ./packages.docs
-        run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
-        env:
-          GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
+       - name: Deploy storybook
+         working-directory: ./packages/docs
+         run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
+         env:
+           GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
