--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -20,6 +20,9 @@ jobs:
       - run: npm ci
 
       - run: npm run build
+        env: 
+            TURBO_TOKEN: femELCz0n5EejW20BHkCWgzq
+            TURBO_TEAM: lucascecilianos-projects
 
       - name: Deploy storybook
         working-directory: ./packages/docs
