--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@apollo-ds/eslint-config",
   "license": "MIT",
+  "version": "2.0.0",
   "private": true,
   "main": "indes.js",
   "devDependencies": {
