--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -21,7 +21,7 @@ jobs:
 
       - run: npm run build
         env: 
-            TURBO_TOKEN: femELCz0n5EejW20BHkCWgzq
+            TURBO_TOKEN: ${{ secrets.VERCEL_TOKEN }}
             TURBO_TEAM: lucascecilianos-projects
 
       - name: Deploy storybook
